<resources>
    <string name="app_name">Hardoi News</string>
    <string name="home">Home</string>
    <string name="desh">देश</string>
    <string name="UP">उत्तर प्रदेश</string>
    <string name="politics">राजनीति</string>
    <string name="education">शिक्षा</string>
    <string name="crime">क्राइम</string>
    <string name="games">खेलकूद</string>
    <string name="health">स्वास्थ्य</string>
    <string name="share">Share app</string>
    <string name="contact">Developer\'s Contact</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="categories">Categories</string>
    <string name="communicate">Communicate</string>
    <string name="main_title">News Hardoi</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="toast_network_error">Network connectivity is bad! Please try again</string>
    <string name="permission">Please enable permissions</string>
    <string name="daily_reads">Latest Posts</string>
    <string name="exit">Exit</string>
    <string name="spl_from">from</string>
    <string name="vs">VSSQUARE</string>
</resources>
