<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    tools:context=".MainActivity">
   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:background="@color/white"
       android:id="@+id/main_layout"
        >

       <com.google.android.material.appbar.AppBarLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/appBar"
           android:theme="@style/AppTheme.AppbarOverlay">

           <androidx.appcompat.widget.Toolbar
               android:layout_width="match_parent"
               android:layout_height="?attr/actionBarSize"
               android:id="@+id/NHToolbar"
               app:popupTheme="@style/AppTheme.PopupOverlay" >
               <TextView
                   android:id="@+id/toolbar_title"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/main_title"
                   android:textColor="@color/white"
                   style="@style/TextAppearance.AppCompat.Title"
                   android:layout_gravity="center" />
           </androidx.appcompat.widget.Toolbar>
       </com.google.android.material.appbar.AppBarLayout>
       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_below="@id/appBar"
           android:layout_height="wrap_content"
           android:id="@+id/post_slider_card"
           >

           <com.smarteist.autoimageslider.SliderView
               android:layout_width="match_parent"
               android:layout_height="220dp"
               android:id="@+id/post_slider"
               android:foreground="@drawable/ripple_effect"
               android:clickable="true"
               android:focusable="true"
               app:sliderAnimationDuration="600"
               app:sliderAutoCycleDirection="back_and_forth"
               app:sliderAutoCycleEnabled="true"
               app:sliderCircularHandlerEnabled="true"
               app:sliderIndicatorAnimationDuration="600"
               app:sliderIndicatorGravity="center_horizontal|bottom"
               app:sliderIndicatorMargin="15dp"
               app:sliderIndicatorOrientation="horizontal"
               app:sliderIndicatorPadding="3dp"
               app:sliderIndicatorRadius="2dp"
               app:sliderIndicatorSelectedColor="@color/white"
               app:sliderIndicatorUnselectedColor="@color/colorPrimary"
               app:sliderScrollTimeInSec="10"
               app:sliderStartAutoCycle="true" />
       </androidx.cardview.widget.CardView>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:background="@color/grey_color"
           android:layout_below="@id/post_slider_card"
           android:text="@string/daily_reads"
           android:textColor="@color/colorPrimary"
           android:textSize="20sp"
           android:paddingTop="8dp"
           android:paddingStart="10dp"
           android:paddingEnd="10dp"
           android:id="@+id/txt_latest_post"
           android:textStyle="bold"
           />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_below="@id/txt_latest_post"
           android:orientation="vertical">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listView"
            >
        </ListView>
       </LinearLayout>


    </RelativeLayout>
        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:menu="@menu/drawer_menu"
            android:background="@color/navigation_back"
            app:itemTextColor="#000000"
            android:theme="@style/NavigationDrawerStyle"
            android:id="@+id/navigation_view"
            android:layout_gravity = "start">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nav_footer_textview1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/spl_from" />

                <TextView
                    android:id="@+id/nav_footer_textview2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:text="@string/vs" />

            </LinearLayout>

        </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>